--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,17 @@ werkzeug==2.3.7
 nltk==3.8.1
 gunicorn==21.2.0
 python-dotenv==1.0.0
+numpy==1.26.4
+blis==0.7.11
+cymem==2.0.8
+preshed==3.0.9
+thinc==8.2.5
+catalogue==2.0.10
+srsly==2.4.8
+wasabi==1.1.3
+murmurhash==1.0.10
+typer==0.12.5
+pathlib==1.0.1
+tqdm==4.66.5
+jinja2==3.1.4
+click==8.1.7
