--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,13 @@
 services:
   - type: web
     name: resume-grader
-    env: docker
-    dockerfilePath: ./Dockerfile
+    env: python
+    plan: free
+    region: oregon
+    buildCommand: "./download_spacy_model.sh"
+    startCommand: "gunicorn app:app"
     envVars:
+      - key: SECRET_KEY
+        generateValue: true
       - key: PYTHON_VERSION
-        value: 3.12
-      - key: FLASK_ENV
-        value: production
-    plan: starter
-    autoDeploy: true
+        value: 3.10.12
