--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: python
     plan: free
     region: oregon
+    preBuildCommand: "apt-get update && apt-get install -y build-essential libblas-dev liblapack-dev"
     buildCommand: "./download_spacy_model.sh"
     startCommand: "gunicorn app:app"
     envVars:
