--- a/render.yaml
+++ b/render.yaml
@@ -1,14 +1,10 @@
 services:
-  - type: web
-    name: resume-grader
-    env: python
-    plan: free
-    region: oregon
-    preBuildCommand: "apt-get update && apt-get install -y build-essential libblas-dev liblapack-dev"
-    buildCommand: "./download_spacy_model.sh"
-    startCommand: "gunicorn app:app"
-    envVars:
-      - key: SECRET_KEY
-        generateValue: true
-      - key: PYTHON_VERSION
-        value: 3.10.12
+     - type: web
+       name: resume-grader
+       env: docker
+       plan: free
+       region: oregon
+       dockerfilePath: ./Dockerfile
+       envVars:
+         - key: SECRET_KEY
+           generateValue: true
