--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==2.3.3
+flask==3.0.3
 PyPDF2==3.0.1
 python-docx==0.8.11
 spacy==3.7.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
 werkzeug==2.3.7
 nltk==3.8.1
-gunicorn==21.2.0
+gunicorn==23.0.0
 python-dotenv==1.0.0
 numpy==1.26.4
 psycopg2-binary==2.9.9
