--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ PyPDF2==3.0.1
 python-docx==0.8.11
 spacy==3.7.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
-werkzeug==2.3.7
+werkzeug>=3.0.0
 nltk==3.8.1
 gunicorn==23.0.0
 python-dotenv==1.0.0
@@ -11,3 +11,4 @@ numpy==1.26.4
 psycopg2-binary==2.9.9
 jinja2==3.1.4
 click==8.1.7
+
